# TZ

./: CMakeLists.txt  TZ_en_150.ts  settings.ini
include/: HeightIndicatorWidget.h  Message1.h  Message2.h  UdpClient.h  UdpServer.h
src/: HeightIndicatorWidget.cpp  UdpClient.cpp  UdpServer.cpp  main.cpp
